<resources>
    <string name="app_name">ADN Ceiba</string>
    <string name="bienvenido_a_parking_app">Bienvenido a Parking APP!</string>
    <string name="seleccione_una_opcion">Seleccione una opción:</string>
    <string name="ingresar_vehiculo">Ingresar Vehiculo</string>
    <string name="retirar_vehiculo">Retirar Vehiculo</string>
    <string name="ingrese_fecha_de_ingreso">Ingrese fecha de ingreso</string>
    <string name="placa">Placa</string>
    <string name="cilindraje">Cilindraje</string>
    <string name="ingresar">Ingresar</string>
    <string name="datos_del_vehiculo">Datos del vehículo</string>
    <string name="ingrese_fecha_de_retiro">Ingrese fecha de retiro</string>
    <string name="retirar">Retirar</string>
    <string name="dias">Días:</string>
    <string name="horas">Horas:</string>
    <string name="cobro_total">Cobro total:</string>
    <string name="vehiculo_ingresado">Vehículo ingresado correctamente!</string>
    <string name="error_ingreso_vehiculo">Error en su ingreso, por favor intente de nuevo</string>
    <string name="retiro_correcto">Vehículo retirado correctamente!</string>
    <string name="error_retiro_vehiculo">Error en el retiro, por favor intente de nuevo</string>
</resources>