<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".withdrawvehicle.view.WithDrawVehicleActivity">

    <data>
        <variable
            name="model"
            type="com.ceiba.adnceiba.withdrawvehicle.viewmodel.WithDrawViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <TextView
                android:id="@+id/tittle_withdraw_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                android:text="@string/datos_del_vehiculo"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_license_plate_withdraw"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tittle_withdraw_vehicle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:hint="@string/placa">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_license_plate_withdraw_vehicle"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:maxLength="6"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_date_time_withdraw"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/input_layout_license_plate_withdraw"
                app:layout_constraintStart_toStartOf="@id/input_layout_license_plate_withdraw"
                android:hint="@string/ingrese_fecha_de_retiro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_date_withdraw_vehicle"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_date_range_black_24dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_delete_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/input_layout_date_time_withdraw"
                android:layout_marginTop="30dp"
                android:text="@string/retirar"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_payment_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/button_delete_vehicle"
                app:layout_constraintStart_toStartOf="@id/input_layout_date_time_withdraw"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tittle_count_day_vehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="30dp"
                    android:text="@string/dias"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/count_day_vehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tittle_count_day_vehicle"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tittle_count_hour_vehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tittle_count_day_vehicle"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/horas"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/count_hour_vehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tittle_count_day_vehicle"
                    app:layout_constraintStart_toEndOf="@id/tittle_count_hour_vehicle"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tittle_payment_vehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tittle_count_hour_vehicle"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/cobro_total"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/payment_vehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tittle_count_hour_vehicle"
                    app:layout_constraintStart_toEndOf="@id/tittle_payment_vehicle"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>

</layout>